force-app/main/default/objects/Order_Night__c/Order_Night__c.object-meta.xml
<CustomObject>
    <description>Auto generated record for calculating stay accommodation allocation</description>
    <label>Order Night (Old)</label>
    <nameField>
        <displayFormat>ON-{000000000}</displayFormat>
        <label>Order Night Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Nights (Old)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>