force-app/main/default/objects/Order_Night__c/fields/Allocation__c.field-meta.xml
<CustomField>
    <fullName>Allocation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Allocation</label>
    <referenceTo>Allocation__c</referenceTo>
    <relationshipLabel>Order Nights</relationshipLabel>
    <relationshipName>Order_Nights</relationshipName>
    <type>Lookup</type>
</CustomField>