force-app/main/default/objects/Order_Night__c/fields/departures_dates__c.field-meta.xml
<CustomField>
    <fullName>departures_dates__c</fullName>
    <label>Departures dates</label>
    <referenceTo>departures_dates__c</referenceTo>
    <relationshipLabel>Order Nights</relationshipLabel>
    <relationshipName>Order_Nights</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>