force-app/main/default/objects/Order_Night__c/fields/evening_date__c.field-meta.xml
<CustomField>
    <fullName>evening_date__c</fullName>
    <label>Evening Date</label>
    <type>Date</type>
</CustomField>