force-app/main/default/objects/Order_Night__c/fields/Hotel_Order_Night__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Order_Night__c</fullName>
    <formula>IF( order__r.deal__r.RecordType.Name =&apos;Hotel&apos;, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hotel Order Night</label>
    <type>Checkbox</type>
</CustomField>