force-app/main/default/objects/Order_Night__c/fields/HSS__c.field-meta.xml
<CustomField>
    <fullName>HSS__c</fullName>
    <label>HSS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>