force-app/main/default/objects/Order_Night__c/fields/HSS_Cost__c.field-meta.xml
<CustomField>
    <fullName>HSS_Cost__c</fullName>
    <formula>departures_dates__r.HSS_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HSS Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>