force-app/main/default/objects/Order_Night__c/fields/is_first_night__c.field-meta.xml
<CustomField>
    <fullName>is_first_night__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is First Night</label>
    <type>Checkbox</type>
</CustomField>