force-app/main/default/objects/Order_Night__c/fields/order_quantity__c.field-meta.xml
<CustomField>
    <fullName>order_quantity__c</fullName>
    <label>Order Quantity</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>